---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Bumped the required Factorio version to 1.1.79
  Bugfixes:
    - Fixed recipe move buttons not being enabled correctly when subfloors are folded out
    - (Hopefully) fixed a crash due to migration issues for subfactories in archive

---------------------------------------------------------------------------------------------------
Version: 1.1.65
Date: 10. 05. 2023
  Features:
    - Added a section to the Utility dialog where relevant blueprints can be stored on each subfactory
    - Added a live-updating list of module effects to the machine and beacon dialogs
    - Made it so all items of the same kind are highlighted when hovering over one in the compact dialog
    - Added the console command '/fp-shrinkwrap-interface' to reduce the size of the interface until it fits the screen
  Changes:
    - Changed the main interface shrinkwrap to now apply when resolution or scale changes
    - Extended the overload beacon detection to a couple more mods (Thanks ctgPi!)
    - Changed the matrix settings dialog to show items in natural sort order (Thanks ctgPi!)
    - Moved both preferences from the production header to the preferences dialog
    - Removed the background dimmer and click-blocker around the main interface
    - Simplified indentation visuals for folded out subfloors
    - Updated the GUI in a few other minor ways
  Bugfixes:
    - Fixed a rare bug when repairing subfactories with invalid subfloors

---------------------------------------------------------------------------------------------------
Version: 1.1.64
Date: 30. 04. 2023
  Features:
    - Added the ability to shift subfactories and recipes by 5 spots
  Changes:
    - Limited beacon amount to 1 when using the mod with Space Exploration
    - Changed exact machine limits to default to being enabled
  Bugfixes: